Declare Add-Opens in the uber-jar manifest
owlapi 4.1.3 pulls in Guice 4.0, whose bundled cglib reflects into
ClassLoader.defineClass. On JDK 16+ that throws InaccessibleObjectException
when AxiomRelationshipConversionService is instantiated, so every caller had
to remember to pass --add-opens java.base/java.lang=ALL-UNNAMED.

Declaring Add-Opens: java.base/java.lang in the manifest moves that permission
into the artifact itself: the java launcher applies it when the jar is started
with -jar, so automated runners need no change to their launch command.

Note this only covers -jar launches. Running through the classpath
(java -cp ... com.termmed.runner.Runner) ignores the manifest and still needs
the option on the command line.

Verified on JDK 17: -ALL_INDEX_WITH_PREF now completes with no JVM options at
all, and the generated .bson output is byte-for-byte identical to the previous
run made with the explicit flag.

Docs updated accordingly, including a note that a "WARNING: An illegal
reflective access operation" message cannot come from JDK 17 (the
--illegal-access option was removed there), so it indicates the process is
still running on an older JDK.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>